[tool.poetry]
name = "last-leson"
version = "0.1.0"
description = ""
authors = ["YaelPriz <yaelevanon@gmail.com>"]
readme = "README.md"
packages = [{include = "last_leson"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

